[gd_scene load_steps=24 format=3 uid="uid://vf8cuivnxvul"]

[ext_resource type="Script" path="res://scripts/enemy_2.gd" id="1_vq0mu"]
[ext_resource type="Texture2D" uid="uid://od32htw3f6ny" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/walk_0.png" id="1_ywk8f"]
[ext_resource type="Texture2D" uid="uid://bfle0ls110p3a" path="res://Free 2D Animated Vector Game Character Sprites/Extras/shadow.png" id="2_4d0cf"]
[ext_resource type="Texture2D" uid="uid://cjhex5qundj5b" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/walk_1.png" id="2_khgx2"]
[ext_resource type="Texture2D" uid="uid://d18w2w0xmm1ik" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/hit_0.png" id="3_a1mjd"]
[ext_resource type="Texture2D" uid="uid://dmsvyttrrdj87" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/roll_0.png" id="3_klue4"]
[ext_resource type="Texture2D" uid="uid://dtfc005clg4aw" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/walk_2.png" id="3_kyidj"]
[ext_resource type="Texture2D" uid="uid://2xhuxrep06ci" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/hit_1.png" id="4_7camp"]
[ext_resource type="Texture2D" uid="uid://d83l0twereqd" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/walk_3.png" id="4_7sg0q"]
[ext_resource type="Texture2D" uid="uid://cmxlpqk4m3fxx" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/roll_1.png" id="4_hb01w"]
[ext_resource type="Texture2D" uid="uid://dbicis4sbrol8" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/roll_2.png" id="5_jkqq8"]
[ext_resource type="Texture2D" uid="uid://dlrxjyoqgfdau" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/hit_2.png" id="5_k3bwm"]
[ext_resource type="Texture2D" uid="uid://jiit7ku227xx" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/walk_4.png" id="5_vy68r"]
[ext_resource type="Texture2D" uid="uid://dephv2lwju1ag" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/roll_3.png" id="6_alr56"]
[ext_resource type="Texture2D" uid="uid://dfu5r8mmfiprw" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/walk_5.png" id="6_r448m"]
[ext_resource type="Texture2D" uid="uid://bwmvjsacgl10t" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/walk_6.png" id="7_61a2h"]
[ext_resource type="Texture2D" uid="uid://d07g7t836abih" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/roll_4.png" id="7_kac7q"]
[ext_resource type="Texture2D" uid="uid://di026bibkr2q0" path="res://Free 2D Animated Vector Game Character Sprites/Full body animated characters/Enemies/Enemy 2/walk_7.png" id="8_pra5y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_filqi"]
radius = 21.0
height = 56.0

[sub_resource type="SpriteFrames" id="SpriteFrames_858dm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_klue4")
}, {
"duration": 1.0,
"texture": ExtResource("4_hb01w")
}, {
"duration": 1.0,
"texture": ExtResource("5_jkqq8")
}, {
"duration": 1.0,
"texture": ExtResource("6_alr56")
}, {
"duration": 1.0,
"texture": ExtResource("7_kac7q")
}],
"loop": true,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_a1mjd")
}, {
"duration": 1.0,
"texture": ExtResource("4_7camp")
}, {
"duration": 1.0,
"texture": ExtResource("5_k3bwm")
}],
"loop": false,
"name": &"hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ywk8f")
}, {
"duration": 1.0,
"texture": ExtResource("2_khgx2")
}, {
"duration": 1.0,
"texture": ExtResource("3_kyidj")
}, {
"duration": 1.0,
"texture": ExtResource("4_7sg0q")
}, {
"duration": 1.0,
"texture": ExtResource("5_vy68r")
}, {
"duration": 1.0,
"texture": ExtResource("6_r448m")
}, {
"duration": 1.0,
"texture": ExtResource("7_61a2h")
}, {
"duration": 1.0,
"texture": ExtResource("8_pra5y")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a2i4m"]
radius = 21.0
height = 56.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_klopg"]
bg_color = Color(0, 0, 0, 0.196078)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhbxn"]
bg_color = Color(0.792157, 0, 0.0705882, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="enemy_2" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
motion_mode = 1
script = ExtResource("1_vq0mu")

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.317647)
z_index = -1
position = Vector2(0, 33)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_4d0cf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_filqi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -44)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_858dm")
animation = &"attack"

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_a2i4m")

[node name="hit_animation" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="healthbar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -40.0
offset_right = 17.0
offset_bottom = -34.0
theme_override_styles/background = SubResource("StyleBoxFlat_klopg")
theme_override_styles/fill = SubResource("StyleBoxFlat_xhbxn")
max_value = 15.0
value = 15.0
show_percentage = false

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="hit_animation" to="." method="_on_hit_animation_timeout"]
